--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,16 @@ ul.posts li {
     position: relative;
     display: inline-block;
 }
+.menudrp{
+    position: relative;
+    display: inline-block;
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
