--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: white;
+    color: #999;
 }
 a:hover {
     text-decoration: underline;
@@ -65,6 +65,9 @@ ul.posts li {
     font-size: 16px;
     border: none;
     cursor: pointer;
+}
+.menudrp a {
+    color: white;
 }
 
 /* Dropdown Content (Hidden by Default) */
