--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,9 @@ ul.posts li {
 }
 .menudrp a {
     color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 /* Dropdown Content (Hidden by Default) */
