--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
-    font-weight: bold;text-align: center;
+    font-weight: bold;
+    text-align: right;
 }
 nav ul li, footer ul li {
     display: inline;
