--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ nav ul, footer ul {
     list-style: none;
     font-weight: bold;
     text-align: right;
+    background-image: url("../drib-processing.png.gif");;
 }
 nav ul li, footer ul li {
     display: inline;
