--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@ body {
     margin: 60px auto;
     width: 70%;
 }
-nav ul, footer ul {
+ul{
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
     text-align: right;
 }
-nav ul li, footer ul li {
+ul li, ul li {
     display: inline;
     margin-right: 20px;
 }
