--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ ul.posts li {
 .menudrp{
     position: relative;
     display: inline-block;
-    background-color: #4CAF50;
+    background-color: blue;
     color: white;
     padding: 16px;
     font-size: 16px;
